[package]
name = "candlestick"
version = "0.2.0"
authors = ["WatchDG <baranov@w3m.co>"]
license = "MIT OR Apache-2.0"
description = "candlestick struct"
homepage = "https://github.com/WatchDG/rust-candlestick"
documentation = "https://docs.rs/candlestick"
repository = "https://github.com/WatchDG/rust-candlestick"
readme = "README.md"
edition = "2018"

[dependencies]
time-series = { version = "0.1", optional = true }

[features]
time_series = ["time-series"]